# jira-api-v2-rs

./: Cargo.toml  README.md  crates-io.md
.openapi-generator/: FILES
docs/: AppPropertiesApi.md  Application.md  ApplicationProperty.md  ApplicationRolesApi.md  Attachment.md  AttachmentArchive.md  AttachmentArchiveMetadataReadable.md  AttachmentMetadata.md  AuditRecordBean.md  AuditRecords.md  AuditRecordsApi.md  Avatar.md  Avatars.md  AvatarsApi.md  BulkCreateCustomFieldOptionRequest.md  BulkIssuePropertyUpdateRequest.md  BulkOperationErrorResult.md  BulkPermissionGrants.md  BulkPermissionsRequestBean.md  ChangedWorklog.md  ChangedWorklogs.md  Changelog.md  Comment.md  Component.md  ComponentIssuesCount.md  ComponentWithIssueCount.md  Configuration.md  ConnectWorkflowTransitionRule.md  ConvertedJqlQueries.md  CrateWorkflowStatusDetails.md  CreateWorkflowDetails.md  CreateWorkflowTransitionDetails.md  CreatedIssue.md  CreatedIssues.md  CustomFieldContextDefaultValueCascadingOption.md  CustomFieldDefinitionJsonBean.md  Dashboard.md  DashboardDetails.md  DashboardsApi.md  DeleteAndReplaceVersionBean.md  (+270 more)
src/apis/: app_properties_api.rs  application_roles_api.rs  audit_records_api.rs  avatars_api.rs  configuration.rs  dashboards_api.rs  dynamic_modules_api.rs  filter_sharing_api.rs  filters_api.rs  group_and_user_picker_api.rs  groups_api.rs  issue_attachments_api.rs  issue_comment_properties_api.rs  issue_comments_api.rs  issue_custom_field_contexts_api.rs  issue_custom_field_options_api.rs  issue_custom_field_options_apps_api.rs  issue_field_configurations_api.rs  (+61 more)
(+419 files in other folders)
