[package]
name = "jira-api-v2"
version = "1.0.1"
authors = ["Vladlen Chekunov <chekunov@national.shitposting.agency>"]
description = "Jira Cloud platform REST API"
edition = "2021"
repository = "https://github.com/VladChekunov/jira-api-v2-rs"
license = "GPL-3.0-or-later"
license-file = "LICENSE"
readme = "crates-io.md"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
